Minor design and bug fixes. Further responsiveness improvements.

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         </div>
       </div>
     </div>
-
-    <ul id="navBarItems" class="hide">
-      <li class="navBarItem">
-        <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
-      </li>
-      <li class="navBarItem">
-        <a class="navBarTitles" href="#projectsSection"> PROJECTS </a>
-      </li>
-      <li class="navBarItem">
-        <a class="navBarTitles" href="#contactSection"> CONTACT </a>
-      </li>
-    </ul>
-
+    <div id="navBarItemsLarge">
+      <ul id="navBarItems" class="hide">
+        <li class="navBarItem">
+          <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
+        </li>
+        <li class="navBarItem">
+          <a class="navBarTitles" href="#projectsSection"> PROJECTS </a>
+        </li>
+        <li class="navBarItem">
+          <a class="navBarTitles" href="#contactSection"> CONTACT </a>
+        </li>
+      </ul>
+    </div>
     <!-- LANDING SECTION -->
     <section id="landingSection">
       <div class="wrapper animatedSection">
