--- a/index.html
+++ b/index.html
@@ -642,62 +642,34 @@
           </p>
         </div>
         <div class="projectContainer">
-          <div class="pictureWrapper">
-            <img
-              class="projectPictures"
-              src="assets/images/Project Pictures/DEPO.png"
-              title="Depo Web Application Fines Tab."
-              alt="A picture of the DEPO Web Application Fines tab was supposed to appear here..."
-            />
+          <div class="projectContainer1">
+            <div class="pictureWrapper">
+              <img
+                class="projectPictures"
+                src="assets/images/Project Pictures/DEPO.png"
+                title="Depo Web Application Fines Tab."
+                alt="A picture of the DEPO Web Application Fines tab was supposed to appear here..."
+              />
+            </div>
           </div>
+          <div class="projectContainer2">
+            <div>
+              <h2 class="projectTitle">DEPO Web Application:</h2>
+            </div>
 
-          <div>
-            <h2 class="projectTitle">DEPO Web Application:</h2>
-          </div>
+            <div class="smallBlock">
+              <h5>Overview:</h5>
 
-          <div class="smallBlock">
-            <h5>Overview:</h5>
+              As a Capstone Project my classmates and I developed DEPO, a web
+              app to automate purchase reporting for Puerto Rico govt entities.
+              Minimized errors & sped up data entry. Focused on user-friendly
+              portal for ASG employees.
+            </div>
 
-            As a Capstone Project my classmates and I developed DEPO, a web app
-            to automate purchase reporting for Puerto Rico govt entities.
-            Minimized errors & sped up data entry. Focused on user-friendly
-            portal for ASG employees.
-          </div>
-
-          <div class="primaryButtons">
-            <button
-              onclick="window.location.href='/jadnell555.github.io/Projects/depoProject.html';"
-              title="More details about the DEPO Web App"
-            >
-              More Details:
-            </button>
-          </div>
-        </div>
-
-        <div class="projectContainer">
-          <div class="pictureWrapper">
-            <img
-              class="projectPictures"
-              src="assets/images/Project Pictures/MP.png"
-              title="My Portfolio (This Website)."
-              alt="A picture of My Portfolio was supposed to appear here..."
-            />
-          </div>
-          <h2 class="projectTitle">My Portfolio v0.8:</h2>
-
-          <div class="smallBlock">
-            <h5>Overview:</h5>
-
-            Dive into my knowledge! Explore real-world projects (personal & uni)
-            & master skills I've honed. Contact me via social media, form, or
-            Resumé. Built with free & user-friendly GitHub Pages. Evolving since
-            July 2023. (This Website)
-          </div>
-          <div class="wrapper">
             <div class="primaryButtons">
               <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/myPortfolioProject.html';"
-                title="More details about my Portfolio"
+                onclick="window.location.href='/jadnell555.github.io/Projects/depoProject.html';"
+                title="More details about the DEPO Web App"
               >
                 More Details:
               </button>
@@ -706,95 +678,140 @@
         </div>
 
         <div class="projectContainer">
-          <div class="pictureWrapper">
-            <img
-              class="projectPictures"
-              src="assets/images/Project Pictures/HQG.png"
-              title="Haresh Quiz Game Main Screen."
-              alt="A picture of Haresh Quiz Game was supposed to appear here..."
-            />
+          <div class="projectContainer1">
+            <div class="pictureWrapper">
+              <img
+                class="projectPictures"
+                src="assets/images/Project Pictures/MP.png"
+                title="My Portfolio (This Website)."
+                alt="A picture of My Portfolio was supposed to appear here..."
+              />
+            </div>
           </div>
+          <div class="projectContainer2">
+            <h2 class="projectTitle">My Portfolio v0.8:</h2>
 
-          <h2 class="projectTitle">Haresh Quiz Game:</h2>
+            <div class="smallBlock">
+              <h5>Overview:</h5>
 
-          <div class="smallBlock">
-            <h5>Overview:</h5>
-
-            Test your knowledge with Haresh Quiz Game! A simple game developed
-            for my Advanced Programming class using Python. Answer 20 questions
-            to win. 3 lives, simple GUI, 3 versions: simple logic, functions and
-            classes.
-          </div>
-          <div class="wrapper">
-            <div class="primaryButtons">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/hareshQuizGame.html';"
-                title="More details about Haresh Quiz Game"
-              >
-                More Details:
-              </button>
+              Dive into my knowledge! Explore real-world projects (personal &
+              uni) & master skills I've honed. Contact me via social media,
+              form, or Resumé. Built with free & user-friendly GitHub Pages.
+              Evolving since July 2023. (This Website)
+            </div>
+            <div class="wrapper">
+              <div class="primaryButtons">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/myPortfolioProject.html';"
+                  title="More details about my Portfolio"
+                >
+                  More Details:
+                </button>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="projectContainer">
-          <div class="pictureWrapper">
-            <img
-              class="projectPictures"
-              src="assets/images/Project Pictures/DCM.png"
-              title="DC Motor Circuit with two Inputs."
-              alt="A picture of a DC Motor circuit was supposed to appear here..."
-            />
+          <div class="projectContainer1">
+            <div class="pictureWrapper">
+              <img
+                class="projectPictures"
+                src="assets/images/Project Pictures/HQG.png"
+                title="Haresh Quiz Game Main Screen."
+                alt="A picture of Haresh Quiz Game was supposed to appear here..."
+              />
+            </div>
           </div>
-          <h2 class="projectTitle">DC Motor Control:</h2>
+          <div class="projectContainer2">
+            <h2 class="projectTitle">Haresh Quiz Game:</h2>
 
-          <div class="smallBlock">
-            <h5>Overview:</h5>
+            <div class="smallBlock">
+              <h5>Overview:</h5>
 
-            Harnessing an Arduino board, C++ & keyboard inputs, we built a
-            system that commands a DC motor's speed! Watch it accelerate using
-            pulse width modulation, then take the wheel through your keyboard.
-          </div>
-          <div class="wrapper">
-            <div class="primaryButtons">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/dcMotorControlProject.html';"
-                title="More details about DC Motor Control"
-              >
-                More Details:
-              </button>
+              Test your knowledge with Haresh Quiz Game! A simple game developed
+              for my Advanced Programming class using Python. Answer 20
+              questions to win. 3 lives, simple GUI, 3 versions: simple logic,
+              functions and classes.
+            </div>
+            <div class="wrapper">
+              <div class="primaryButtons">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/hareshQuizGame.html';"
+                  title="More details about Haresh Quiz Game"
+                >
+                  More Details:
+                </button>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="projectContainer">
-          <div class="pictureWrapper">
-            <img
-              class="projectPictures"
-              src="assets/images/Project Pictures/STM.png"
-              title="28byj-48 Step Motor and Arduino Connector."
-              alt="A picture of a 28byj-48 Step Motor and an Arduino Connector was supposed to appear here..."
-            />
+          <div class="projectContainer1">
+            <div class="pictureWrapper">
+              <img
+                class="projectPictures"
+                src="assets/images/Project Pictures/DCM.png"
+                title="DC Motor Circuit with two Inputs."
+                alt="A picture of a DC Motor circuit was supposed to appear here..."
+              />
+            </div>
           </div>
+          <div class="projectContainer2">
+            <h2 class="projectTitle">DC Motor Control:</h2>
 
-          <h2 class="projectTitle">Step Motor Control:</h2>
+            <div class="smallBlock">
+              <h5>Overview:</h5>
 
-          <div class="smallBlock">
-            <h5>Overview:</h5>
-
-            This project used an Arduino & C++ to command a 28BYJ-48 geared step
-            motor. Control included clockwise/counter-clockwise rotation
-            (continuous & by steps) & stop function, all triggered by keyboard
-            commands. ️
+              Harnessing an Arduino board, C++ & keyboard inputs, we built a
+              system that commands a DC motor's speed! Watch it accelerate using
+              pulse width modulation, then take the wheel through your keyboard.
+            </div>
+            <div class="wrapper">
+              <div class="primaryButtons">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/dcMotorControlProject.html';"
+                  title="More details about DC Motor Control"
+                >
+                  More Details:
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="wrapper">
-            <div class="primaryButtons">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/stepMotorControlProject.html';"
-                title="More details about Step Motor Control"
-              >
-                More Details:
-              </button>
+        </div>
+
+        <div class="projectContainer">
+          <div class="projectContainer1">
+            <div class="pictureWrapper">
+              <img
+                class="projectPictures"
+                src="assets/images/Project Pictures/STM.png"
+                title="28byj-48 Step Motor and Arduino Connector."
+                alt="A picture of a 28byj-48 Step Motor and an Arduino Connector was supposed to appear here..."
+              />
+            </div>
+          </div>
+          <div class="projectContainer2">
+            <h2 class="projectTitle">Step Motor Control:</h2>
+
+            <div class="smallBlock">
+              <h5>Overview:</h5>
+
+              This project used an Arduino & C++ to command a 28BYJ-48 geared
+              step motor. Control included clockwise/counter-clockwise rotation
+              (continuous & by steps) & stop function, all triggered by keyboard
+              commands. ️
+            </div>
+            <div class="wrapper">
+              <div class="primaryButtons">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/stepMotorControlProject.html';"
+                  title="More details about Step Motor Control"
+                >
+                  More Details:
+                </button>
+              </div>
             </div>
           </div>
         </div>
